--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,14 @@ marquee{
   padding-bottom: 3%;
   padding-top: 3%;
 }
+
+.foo3{
+  padding-bottom: 1.2%;
+  padding-top: 1%;
+  text-align: center;
+  color: darkblue;
+  animation-fill-mode: both;
+}
 .row{
 
   list-style: none;
@@ -32,7 +40,7 @@ marquee{
   text-align: center;
 }
 h4{
-  text-align: left;
+  text-align: center;
   color: white;
 }
 h2{
