Added scripts and files for jQuery plugin Gallery slider

--- a/css/pay.css
+++ b/css/pay.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .navbar-expand-lg {
   font-family: 'Caesar Dressing', cursive;
   font-size: 25px;
@@ -55,6 +58,32 @@ p {
 .btn-buy:hover{
   transform: scale(1.08);
 }
+
+.main-gallery {
+    max-width: 1000px;
+    margin: auto;
+    background-color: #f1f1f1;
+}
+
+.gallery {
+    margin: 8px -16px;
+}
+.gallery:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.col-md-3 {
+  padding: 8px;
+  float: left;
+  width: 25%;
+}
+.content {
+    background-color: white;
+    padding: 10px;
+}
+
+
 span {
   font-size: 25px;
 }
