--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,6 @@
-.jumbotron {
-    padding-top: 0px;
-    padding-bottom: 100px;
-    background-color: #67aeca;
-    background-image: url(../images/shoe1.jpeg);
-    color: white;
-  }
-  html, body{
+html, body{
 
-  background-color: #FCF9F8;
-}
-marquee{
-  color: #C0F79A;
-
+  /* background-color: #FCF9F8; */
 }
 
 .icon{
@@ -34,6 +23,8 @@ marquee{
 .row{
 
   list-style: none;
+
+}
 
 }
 #social{
@@ -71,6 +62,9 @@ h2{
 /* carousel */
 .section{
   padding-bottom: 20px;
+  margin: 20px;
+  box shadow: 0.1px, 0.1px, 1px, 1px rgb(224, 222, 222);
+
 }
 .carousel{
     background: #F6FAD7;
@@ -89,4 +83,79 @@ h2{
 
 .panel-body {
     padding: 0px;
+}
+
+
+/* HEADER */
+header {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  height: 100vh;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  transform-style: preserve-3d;
+  perspective: 100px;
+  padding-top: 20%;
+  font-family: 'Kaushan Script', cursive;
+}
+
+header:before {
+  animation: fade-slide-down 2s .5s cubic-bezier(0, 0.5, 0, 1) forwards;
+  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.8)),
+              url(../images/shoe5.jpeg) no-repeat bottom;
+  background-size: cover;
+  content: "";
+  opacity: 0;
+  position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  z-index: -1;
+}
+
+header:after {
+  background: #F9FCFF;
+  content: "";
+  height: 40rem;
+  left: -5%;
+  position: absolute;
+    right: -5%;
+    top: 90%;
+  transform-origin: 0 0;
+  transform: rotateZ(-4deg);
+  z-index: 0;
+}
+
+.header-title, .header-subtitle {
+  color: #fff;
+}
+
+.header-subtitle {
+  text-transform: uppercase;
+  margin-bottom: 5rem;
+}
+
+.header-button {
+  transform: translateZ(.1px);
+  position: relative;
+  z-index: 10;
+}
+
+/* Animations */
+
+@keyframes fade-slide-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-4rem);
+  }
+  100% {
+    opacity: 5;
+    transform: none;
+    background-position: -2
+    PX 0;
+  }
 }
