--- a/css/pay.css
+++ b/css/pay.css
@@ -60,30 +60,30 @@ p {
 }
 
 .main-gallery {
-    max-width: 1000px;
+    width: 1400px;
+    height: 3000px;
     margin: auto;
-    background-color: #f1f1f1;
-}
-
-.gallery {
-    margin: 8px -16px;
-}
-.gallery:after {
-    content: "";
-    display: table;
-    clear: both;
+    background-color: #f5f5f5;
 }
 .col-md-3 {
-  padding: 8px;
-  float: left;
-  width: 25%;
-}
-.content {
-    background-color: white;
-    padding: 10px;
+  background-color: #f0f0f0;
+  width: 350px;
+  height: 500px;
+  margin: 20px;
+  border-radius: 8px;
+  margin-left: 70px;
+
 }
 
+.col-md-3 img {
+  width: 280px;
+  height: 280px;
+  margin-left: 40px;
+  margin-right: 80px;
+  margin-top: 10px;
+  border-radius: 8px;
 
+}
 span {
   font-size: 25px;
 }
