--- a/css/rent.css
+++ b/css/rent.css
@@ -41,10 +41,10 @@ input:hover {
   border-bottom: 2px solid red;
 }
 
-html {
-  box-sizing: border-box;
+img {
+  padding-left: 15px;
+  padding-top: 15px;
 }
-
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -55,12 +55,12 @@ html {
   margin-bottom: 30px;
   margin-right: 50px;
   margin-left: 50px;
-  padding: 0 8px;
+  padding left : 5px;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 350px) {
   .column {
-    width: 100%;
+    width: 0px;
     display: block;
   }
 }
