--- a/css/rent.css
+++ b/css/rent.css
@@ -48,7 +48,9 @@ img {
 *, *:before, *:after {
   box-sizing: inherit;
 }
-
+div.crop-text {
+  max-width: 350px;
+}
 .column {
   float: left;
   width: 350px;
@@ -56,6 +58,7 @@ img {
   margin-right: 50px;
   margin-left: 50px;
   padding left : 5px;
+  max-height: 700px;
 }
 
 @media screen and (max-width: 350px) {
