--- a/css/rent.css
+++ b/css/rent.css
@@ -1,39 +1,48 @@
+header {
+    background-color: #666;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
+}
+section#rent {
+    background-color: #5f0f4e;
+    padding-top: 50px;
+    margin bottom: 50px;
+}
+section#adding-form {
+  margin-top: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  margin-top: 100px;
+  background-color: rgb(255, 255, 255, 80%);
+  box-shadow: 0.1px 0px 1px 3px rgb(224, 222, 222);
+
+}
+
 div#uploading-colomn {
-  height:500px;
-  width: 500px;
+  height:300px;
+  width: 300px;
   border-style: dashed;
   padding-top: 200px;
   padding-left:200px;
   margin-right: 50px;
   margin-left: 10px;
 }
-body {
-  background-color: #5f0f4e;
+div#product-form {
+  margin-left: 50px;
+  margin-right: 50px;
 }
-
 div#product-row {
-  margin-left: 170px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  width: 1000px;
-  margin-top: 100px;
-  background-color: rgb(255, 255, 255, 80%);
-  box-shadow: 0.1px 0px 1px 3px rgb(224, 222, 222);
+
+
 }
 div#uploading-form {
-  padding right: 10px;
-  padding-top: 10px;
+
   flex: 10%;
 
 }
-div#product-form {
-    background-image: url("../images/shoe1.jpeg");
-    background-size: cover;
-margin: 0px;
-background-repeat: no-repeat;
-
-}
-
 input {
     border: none;
     border-bottom: 1px solid grey;
@@ -82,17 +91,14 @@ button#add {
 .glyphicon-plus {
   font-size: 300px;
 }
+
 @media screen and (max-width: 350px) {
   .column {
     width: 200px;
     display: block;
   }
 }
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  height: 700px;
-  width: 350px;
-}
+
 .container::after, .row::after {
   content: "";
   clear: both;
