--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@ html, body{
   background-color: #67aeca;
 }
 
+/* #goo{
+  text-align: center;
+  padding-top: 40px;
+  margin-top: 40px;
+} */
+
 .foo3{
   padding-bottom: 1.2%;
   padding-top: 1%;
@@ -68,8 +74,8 @@ h2{
 }
 /* carousel */
 .section{
-  padding-bottom: 20px;
-  margin: 20px;
+  padding-bottom: 0px;
+  margin: 0px;
   box shadow: 0.1px, 0.1px, 1px, 1px rgb(224, 222, 222);
 
 }
@@ -158,7 +164,7 @@ header:after {
 }
 #jk3{
   margin-top: 0px;
-  
+
 }
 #kj3{
   margin-bottom: 0px;
