--- a/css/styles.css
+++ b/css/styles.css
@@ -58,29 +58,40 @@ h2{
   background-color: #CB9B80;
   padding: 0;
 }
-.container-fluid {
+#man {
     padding-right: 0px;
     padding-left: 0px;
     margin-right: auto;
     margin-left: auto;
     padding-top: 0px;
-    background-color: gray;
+    /* background-color: rgb(0,0,0,0.8); */
 
 }
+p{
+  color: rgb(229,42,111);
+}
 .navbar{
-  background-color: #AB7A62;
+  background-color: rgb(103,174,202, 0.7)
 
 
+}
+.myCarousel{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+#my{
+  margin-bottom: 0;
+  color: #
 }
 /* carousel */
 .section{
   padding-bottom: 0px;
-  margin: 0px;
-  box shadow: 0.1px, 0.1px, 1px, 1px rgb(224, 222, 222);
+  margin-top: 50px;
+  box shadow: 0.1px, 0.1px, 1px, 1px rgb(0 , 0, 0, 0.7);
 
 }
 .carousel{
-    background: #F6FAD7;
+    background: #ffffff;
     margin-top: 20px;
 }
 .carousel .item{
@@ -90,7 +101,17 @@ h2{
     margin: 0 auto;
 }
 .jos-slide{
-	margin: 10px;
+	margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+#jm{
+  background-color: rgb(0,0,0,0.2);
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 /* carousel */
 
@@ -99,42 +120,53 @@ h2{
 header {
   align-items: center;
   display: flex;
-  font-size: 18px;
-  height: 40vh;
+  font-size: 85px;
+  height: 100vh;
   justify-content: center;
   overflow: hidden;
   position: relative;
   text-align: center;
   transform-style: preserve-3d;
   perspective: 100px;
-  padding-top: 2%;
+  padding-top: 25%;
   font-family: 'Kaushan Script', cursive;
+}
+
+.header-button{
+  font-size: 25px;
+  color: white;
+}
+.header-title{
+  font-size: 60px;
 }
 
 header:before {
   animation: fade-slide-down 2s .5s cubic-bezier(0, 0.5, 0, 1) forwards;
-  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.8)),
-              url(../images/shoe1.jpeg) no-repeat bottom;
+  /* background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.8)); */
+  background-image: url(../images/homepage.jpg);
+  /* no-repeat bottom */
   background-size: cover;
+  background-repeat: no-repeat;
   content: "";
   opacity: 0;
+
   position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
   z-index: -1;
-  background-color: #67aeca;
+  /* background-color: #67aeca; */
 }
 
 header:after {
   background: #F9FCFF;
   content: "";
-  height: 20rem;
+  height: 100rem;
   left: -5%;
-  position: absolute;
-    right: -5%;
-    top: 75%;
+  /* position: absolute;
+    right: 5%; */
+    /* bottom: 105%; */
   transform-origin: 0 0;
   transform: rotateZ(-4deg);
   z-index: 0;
