--- a/css/rent.css
+++ b/css/rent.css
@@ -6,23 +6,33 @@ header {
     color: white;
 }
 section#rent {
-    background-color: #ffffff;
+    background-color: #5f0f4e;
     padding-top: 50px;
     margin bottom: 50px;
 }
-.modal-header, h4, .close {
-    background-color: #333;
-    color: #fff !important;
-    text-align: center;
-    font-size: 30px;
+
+div#uploading-colomn {
+  height:300px;
+  width: 300px;
+  border-style: dashed;
+  padding-top: 200px;
+  padding-left:200px;
+  margin-right: 50px;
+  margin-left: 10px;
 }
-
-.modal-header, .modal-body {
-    padding: 40px 50px;
+div#product-form {
+  margin-left: 50px;
+  margin-right: 50px;
 }
+div#product-row {
 
 
+}
+div#uploading-form {
 
+  flex: 10%;
+
+}
 input {
     border: none;
     border-bottom: 1px solid grey;
@@ -50,7 +60,8 @@ div.crop-text {
   margin-left: 50px;
 padding-bottom: 15px;
   max-height: 700px;
-  background-color: rgb(103, 86, 130,0.7);
+  background-color: rgb(255, 255, 255, 80%);
+  box-shadow: 0.1px 0px 1px 3px rgb(224, 222, 222);
 }
 .content {
   width: 300px;
@@ -94,7 +105,7 @@ button#add {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: rgb(229, 42, 111);
+  background-color: #000;
   text-align: center;
   cursor: pointer;
   width: 250px;
