--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5823,8 +5823,8 @@ button.list-group-item-danger.active:focus {
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0);
 }
 .well blockquote {
   border-color: #ddd;
