--- a/css/styles.css
+++ b/css/styles.css
@@ -255,3 +255,35 @@ header:after {
     PX 0;
   }
 }
+{box-sizing: border-box;}
+
+#overlaying {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+}
+
+.image {
+  display: block;
+  width: 350px;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1;
+  width: 350px;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+#overlaying:hover .overlay {
+  opacity: 1;
+}
